--- a/miutils/miutils.vcxproj
+++ b/miutils/miutils.vcxproj
@@ -46,6 +46,9 @@
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6df31f9a-0500-4949-b59a-c71cf936a0a1}</ProjectGuid>
     <Keyword>Linux</Keyword>
