- semaphore added - add CriticalSection to miutils namespace

--- a/miutils/miutils.vcxproj
+++ b/miutils/miutils.vcxproj
@@ -38,11 +38,13 @@
     <ClInclude Include="CriticalSection.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="miString.h" />
+    <ClInclude Include="Semaphore.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="miString.cpp" />
+    <ClCompile Include="Semaphore.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
