Test and bugfixes

--- a/miutils/miutils.vcxproj
+++ b/miutils/miutils.vcxproj
@@ -108,7 +108,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <RemotePostBuildEvent>
-      <Command>cp $(RemoteDebuggerCommand) /usr/lib</Command>
+      <Command>cp ~/projects/miutils/bin/ARM64/Debug//libmiutils.so /usr/lib</Command>
     </RemotePostBuildEvent>
     <Link>
       <LibraryDependencies>pthread</LibraryDependencies>
