--- a/miutils/miutils.vcxproj
+++ b/miutils/miutils.vcxproj
@@ -36,7 +36,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CriticalSection.h" />
-    <ClInclude Include="Event.h" />
+    <ClInclude Include="miAny.h" />
+    <ClInclude Include="TimerEvent.h" />
     <ClInclude Include="miString.h" />
     <ClInclude Include="Semaphore.h" />
     <ClInclude Include="Time.h" />
